// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<div
  class="CardDragHandle"
  data-test-id="cf-ui-card-drag-handle"
>
  <svg
    class="emotion-0"
    data-test-id="cf-ui-icon"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
    />
  </svg>
  <span
    class="CardDragHandle__sr-label"
  >
    CardDragHandle
  </span>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<div
  class="CardDragHandle my-extra-class"
  data-test-id="cf-ui-card-drag-handle"
>
  <svg
    class="emotion-0"
    data-test-id="cf-ui-icon"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
    />
  </svg>
  <span
    class="CardDragHandle__sr-label"
  >
    CardDragHandle
  </span>
</div>
`;

exports[`renders the component with isDragActive prop set to true 1`] = `
.emotion-0 {
  display: inline-block;
  fill: #5A657C;
  height: 18px;
  width: 18px;
}

<div
  class="CardDragHandle CardDragHandle--drag-active"
  data-test-id="cf-ui-card-drag-handle"
>
  <svg
    class="emotion-0"
    data-test-id="cf-ui-icon"
    viewBox="0 0 24 24"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M11 18c0 1.1-.9 2-2 2s-2-.9-2-2 .9-2 2-2 2 .9 2 2zm-2-8c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0-6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm6 4c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm0 6c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2z"
    />
  </svg>
  <span
    class="CardDragHandle__sr-label"
  >
    CardDragHandle
  </span>
</div>
`;
